--- a/pom.xml
+++ b/pom.xml
@@ -30,13 +30,21 @@
             <artifactId>gson</artifactId>
             <version>2.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>net.milkbowl.vault</groupId>
+            <artifactId>VaultAPI</artifactId>
+            <version>1.5</version>
+        </dependency>
     </dependencies>
 
     <repositories>
         <repository>
             <id>spigot-repo</id>
-            <name>spigotmc</name>
             <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
+        </repository>
+        <repository>
+            <id>vault-repo</id>
+            <url>http://nexus.theyeticave.net/content/repositories/pub_releases</url>
         </repository>
     </repositories>
 </project>
